[gd_scene load_steps=4 format=3 uid="uid://vxvkoid3276j"]

[ext_resource type="Script" uid="uid://7wyts0dnyqm0" path="res://scenes/arena_results/arena_results.gd" id="1_sxpwp"]

[sub_resource type="LabelSettings" id="LabelSettings_sxpwp"]
font_color = Color(0, 100, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tocar"]
font_color = Color(0.870268, 0.0566727, 0.0328229, 1)

[node name="ArenaResultsUi" type="Control" groups=["ArenaResults"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxpwp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -11.5
offset_right = 27.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="VictoryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Victory"
label_settings = SubResource("LabelSettings_sxpwp")
horizontal_alignment = 1

[node name="DefeatLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Defeat"
label_settings = SubResource("LabelSettings_tocar")
horizontal_alignment = 1

[node name="DifficultyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Easy"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Time"
horizontal_alignment = 1

[node name="TimeValue" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "060"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GradeLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Grade"
horizontal_alignment = 1

[node name="GradeValue" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "F"
horizontal_alignment = 1

[node name="ClearedArenasLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Arenas 0"
horizontal_alignment = 1

[node name="PlayerDamagedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Damage taken 0"
horizontal_alignment = 1

[node name="EnemyDamagedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Damage given 0"
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Kills 0"
horizontal_alignment = 1

[node name="ExperienceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
